[tool.poetry]
name = "python-concurrency"
version = "0.1.0"
description = ""
authors = ["Shaan Savarirayan <shaan.savarirayan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
async_io = "python_concurrency.async_io:main"
hello = "python_concurrency.hello:main"
multiprocessing_io = "python_concurrency.multiprocessing_io:main"
sync_cpu = "python_concurrency.sync_cpu:main"
sync_io = "python_concurrency.sync_io:main"
threading_io = "python_concurrency.threading_io:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
